force-app/main/default/objects/Character__c/fields/Ability_Total__c.field-meta.xml
<CustomField>
    <fullName>Ability_Total__c</fullName>
    <formula>(Strength__c  +  Dexterity__c  +  Constitution__c  +  Intelligence__c +  Wisdom__c  +  Charisma__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ability Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>