force-app/main/default/objects/Character__c/fields/Charisma__c.field-meta.xml
<CustomField>
    <fullName>Charisma__c</fullName>
    <description>This determines how well you get along and communicate with others.</description>
    <label>Charisma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>