force-app/main/default/objects/Character__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Character_Classes</valueSetName>
    </valueSet>
</CustomField>