force-app/main/default/objects/Character__c/fields/Constitution__c.field-meta.xml
<CustomField>
    <fullName>Constitution__c</fullName>
    <label>Constitution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>