force-app/main/default/objects/Character__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This holds as a description for your character.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>