force-app/main/default/objects/Character__c/fields/Hair_Color_Option__c.field-meta.xml
<CustomField>
    <fullName>Hair_Color_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hair Color Option</label>
    <type>Checkbox</type>
</CustomField>