force-app/main/default/objects/Character__c/fields/Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Intelligence__c</fullName>
    <description>This is how smart and intellectual your character is.</description>
    <label>Intelligence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>