force-app/main/default/objects/Character__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>Pick a race for your D&amp;D Character</description>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Character_Races</valueSetName>
    </valueSet>
</CustomField>