force-app/main/default/objects/Character__c/fields/Select_Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Select_Hair_Color__c</fullName>
    <label>Select Hair Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Bluish</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>