force-app/main/default/objects/Character__c/validationRules/Skill_Point_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_Point_Rule</fullName>
    <active>true</active>
    <description>This rule helps prevent over scoring the 27 points a D&amp;D character is allotted.</description>
    <errorConditionFormula>Strength__c  &gt;= 10     ||
Wisdom__c   &gt;= 10      ||
Charisma__c   &gt;= 10    ||
Constitution__c  &gt;= 10 ||
Dexterity__c   &gt;= 10   ||
Intelligence__c   &gt;= 10</errorConditionFormula>
    <errorMessage>The skill must be 0-10.</errorMessage>
</ValidationRule>